# Brain-Tumor-Segmentation-GP

./: .gitattributes  CODEOWNERS  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/ISSUE_TEMPLATE/: feature.md  user-story.md
.github/workflows/: build-backend-image  build-frontend-image.yml  build-orthanc-image
Meeting Minus/: 11 Sep 23.md  28 Sep 23.md  28.md
Research/Slicer Extension/MMMAI/: .gitignore  CMakeLists.txt  project_structure.txt  readme.md
Research/Slicer Extension/MMMAI/InteractiveSegmentation/: CMakeLists.txt  InteractiveSegmentation.py
Research/Slicer Extension/MMMAI/InteractiveSegmentation/Resources/UI/: InteractiveSegmentation.ui
Research/Slicer Extension/MMMAI/InteractiveSegmentation/model/v2/: nnunet.py  nvidia_nnunet.py  utils.py
Research/Slicer Extension/nvidia-Segmentation/: CMakeLists.txt
Research/Slicer Extension/nvidia-Segmentation/Seg/: CMakeLists.txt  Seg.py
Research/Slicer Extension/nvidia-Segmentation/Seg/BraTS2021_train/: dataset.json
Research/Slicer Extension/nvidia-Segmentation/Seg/Resources/UI/: Seg.ui
Research/Slicer Extension/nvidia-Segmentation/Seg/model/v2/: nnunet.py  nvidiabrain.py  utils.py
Research/active-learning/: Makefile  README.md
Research/active-learning/docs/: Makefile  conf.py  index.rst  make.bat
Research/active-learning/reports/: Nvidia_Trials.md
Research/ain-shams-data/: Makefile  README.md
Research/ain-shams-data/docs/: Makefile  conf.py  index.rst  make.bat
Research/brain_tumor_seg_research/: Makefile
Research/brain_tumor_seg_research/notebooks/: gans-motion.ipynb  notebook-munit.ipynb  notebook-stacked-unet-with-style.ipynb  notebook-unit.ipynb  notebook-wav-stacked-unet-with-style.ipynb  test-munit.ipynb  test-stacked-unet-with-style.ipynb  test-unit.ipynb
Research/mot-art-cor/: README.md  setup.py
Research/mot-art-cor/docs/: Makefile  conf.py  index.rst  make.bat
Research/mot-art-cor/notebooks/: stackedunet.ipynb
Research/notebooks/: Stacked U-net(2 more layers).ipynb  stacked-u-net-visualization.ipynb  stacked-u-net.ipynb
Research/segmentation_deployment/: Dockerfile  README.md  main.py  requirements.txt
Research/src/dataloaders/: Correction_Multi_input.py  Kaggle_dataloader.py  Stacked_U-net.py
Software/: .gitignore  docker-compose.yaml
Software/backend/: app.js  package-lock.json  package.json  requirements.txt
Software/frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
Software/learning/: LEARNING.md
Software/scripts/: provision-jenkins.sh
server/: test.py
src/: App.jsx  Atest.jsx  DicomVolumeViewer.jsx  SaveAnnotations.jsx  SegmentationTools.jsx  StackViewer.jsx  VolumeViewer.jsx  main.jsx
(+393 files in other folders)
